# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  aoc.sublime-project  build.sh  run.sh  test.sh  test_sanitizer.sh  test_valgrind.sh
.github/workflows/: 2021.yml  2022.yml  2023.yml  main.yml
01/: CMakeLists.txt  main.c  part_1.h  part_2.h
02/: CMakeLists.txt  day2.c  day2.h  main.c
03/: CMakeLists.txt  day3.c  day3.h  main.c
04/: CMakeLists.txt  day4.c  day4.h  main.c
05/: CMakeLists.txt  day5.c  day5.h  main.c
06/: CMakeLists.txt  day6.c  day6.h  main.c
07/: CMakeLists.txt  day7.c  day7.h  main.c
08/: CMakeLists.txt  day8.c  day8.h  main.c
09/: CMakeLists.txt  day9.c  day9.h  main.c
10/: CMakeLists.txt  day10.c  day10.h  main.c
11/: CMakeLists.txt  day11.c  day11.h  main.c
12/: CMakeLists.txt  day12.c  day12.h  main.c
13/: CMakeLists.txt  day13.c  day13.h  main.c
14/: CMakeLists.txt  day14.c  day14.h
15/: day15.c  day15.h
16/: day16.c  day16.h
17/: day17.h  main.c
18/: day18.c  day18.h  main.c
19/: CMakeLists.txt  algebra.c  algebra.h  day19.c  day19.h  main.c
20/: CMakeLists.txt  day20.c  day20.h  deleteme.py
2021/: .gitignore  README.md  aoc.sublime-project
2021/01/: day1.c  day1.h
2021/02/: day2.c  day2.h
2021/03/: CMakeLists.txt  day3.h
2021/04/: CMakeLists.txt  day4.h
2021/05/: day5.h  main.c
2021/06/: CMakeLists.txt  bonus_solution.py  day6.c
2021/07/: CMakeLists.txt
2021/09/: day9.h
2021/10/: CMakeLists.txt
2021/11/: CMakeLists.txt  day11.h  main.c
2021/12/: day12.c  day12.h
2021/13/: day13.h  main.c
2021/14/: CMakeLists.txt  day14.h  main.c
2021/15/: CMakeLists.txt  day15.h  main.c
2021/16/: CMakeLists.txt  day16.h  main.c
2021/17/: CMakeLists.txt  day17.c
2021/18/: CMakeLists.txt
2021/19/: algebra.c  day19.c  main.c
2021/20/: main.c
2021/21/: CMakeLists.txt
2021/22/: CMakeLists.txt  main.c
2021/23/: day23.c  dfs.h  main.c  problem_data.h  routing.h
2021/24/: README.md  main.c
2021/25/: CMakeLists.txt  day25.h  main.c
2021/common/: defines.h  hash_table.h  math.h  testing.h  timing.c  timing.h
2021/scripts/: build.sh
2022/: .golangci-ci.yaml  README.md  coverage.sh  go.mod  go.sum  main.go  main_test.go  run_all.sh  timeit.sh
2022/day00/: README.md  day00.go  main_test.go
2022/day01/: day01.go  day01_test.go
2022/day02/: day02.go  day02_test.go
2022/day03/: day03.go  day03_test.go
2022/day04/: day04.go  day04_test.go
2022/day05/: day05.go  day05_test.go
2022/day06/: day06.go  day06_test.go
2022/day07/: day07.go  day07_test.go  filesystem.go  parser.go
2022/day08/: day08.go  day08_test.go
2022/day09/: day09.go  day09_test.go
2022/day10/: day10.go  day10_test.go
2022/day11/: day11.go  day11_test.go
2022/day12/: day12.go  day12_test.go
2022/day13/: day13.go  day13_test.go
2022/day14/: day14.go  day14_test.go
2022/day15/: day15.go  day15_test.go
2022/day16/: day16.go  day16_test.go  lru.go  prunning.go
2022/day17/: day17.go  day17_test.go
2022/day18/: day18.go  day18_test.go
2022/day19/: day19.go  day19_test.go
2022/day20/: day20.go  day20_test.go
2022/day21/: day21.go  day21_test.go  expr.go
2022/day22/: day22.go  day22_test.go  topology.go
2022/day23/: day23.go  day23_test.go
2023/: .clang-format  CMakeLists.txt  README.md  compile_commands.json  dependencies  make
2023/solvelib/: CMakeLists.txt  alldays.hpp
2023/solvelib/01/: day01.cpp  day01.hpp  day01_test.hpp
2023/solvelib/02/: day02.cpp  day02.hpp  day02_test.hpp  game.cpp  game.hpp
2023/solvelib/03/: day03.cpp  day03.hpp  day03_test.hpp
2023/solvelib/04/: day04.cpp  day04.hpp  day04_test.hpp
2023/solvelib/05/: day05.cpp  day05.hpp  day05_test.hpp
2023/solvelib/06/: day06.cpp  day06.hpp  day06_test.hpp
2023/solvelib/07/: day07.cpp  day07.hpp  day07_test.hpp
2023/solvelib/08/: day08.cpp  day08.hpp  day08_test.hpp
2023/solvelib/09/: day09.cpp  day09.hpp  day09_test.hpp
2023/solvelib/10/: day10.cpp  day10.hpp  day10_test.hpp
2023/solvelib/11/: day11.cpp  day11.hpp  day11_test.hpp
2023/solvelib/12/: day12.cpp  day12.hpp  day12_test.hpp
2023/solvelib/13/: day13.cpp  day13.hpp  day13_test.hpp
2023/solvelib/14/: day14.cpp  day14.hpp  day14_test.hpp
2023/solvelib/15/: day15.cpp  day15.hpp  day15_test.hpp
2023/solvelib/16/: day16.cpp  day16.hpp  day16_test.hpp
2023/solvelib/17/: day17.cpp  day17.hpp  day17_test.hpp
2023/solvelib/18/: day18.cpp  day18.hpp  day18_part1.cpp  day18_part2.cpp  day18_test.hpp
2023/solvelib/19/: day19.cpp  day19.hpp  day19_test.hpp
2023/solvelib/20/: README.md  day20.cpp  day20.hpp  day20_test.hpp
2023/solvelib/21/: README.md  day21.cpp  day21.hpp  day21_test.hpp
2023/solvelib/22/: day22.cpp  day22.hpp  day22_test.hpp
2023/solvelib/23/: day23.cpp  day23.hpp  day23_test.hpp
2023/solvelib/24/: day24.cpp  day24.hpp  day24_test.hpp
21/: binomial_distribution.py  day21.c  day21.h  main.c
22/: CMakeLists.txt  day22.c  day22.h  day22_old.c
23/: CMakeLists.txt  day23.c  day23.h  dfs.c  dfs.h  dijkstra.c  dijkstra.h  gamestate.c  gamestate.h  routing.c  routing.h
24/: CMakeLists.txt  README.md  day24.c  day24.h  simulate.c  simulate.h  virtual_machine.c  virtual_machine.h
25/: day25.c
common/: CMakeLists.txt  defines.h  file_utils.c  file_utils.h  forward_list.c  forward_list.h  hash_table.h  math.h  matrix.c  matrix.h  mystring.c  mystring.h  testing.h  timing.c  timing.h  vector.c  vector.h
sample/: CMakeLists.txt  map_sample.c
scripts/: test_all.sh  test_sanitizer.sh
test/: CMakeLists.txt  main.c
(+104 files in other folders)
